<resources>
    <string name="app_name">Madison 365</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_donate">Donate</string>
    <string name="nav_item_about">About</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_donate</item>
        <item>@string/nav_item_about</item>
    </string-array>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_icons">
        <item>R.id.ic_home_black_24dp</item>
        <item>R.id.ic_account_circle_white</item>
        <item>R.id.ic_account_circle_white</item>
    </string-array>

    <string name="title_home">Home</string>
    <string name="title_item_one">Donate</string>
    <string name="title_item_two">About</string>
    <string name="main_screen_cel_date_string">Date</string>
    <string name="share_via">Share via</string>

    <!-- push notification labels -->
    <string name="notification_header">News Alert</string>
    <string name="notification_cancel_button">Cancel</string>
    <string name="notification_read_button">Read</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">About the PUSH APP</string>
    <string name="title_activity_detail_post">Story Detail</string>
    <string name="title_activity_category">Category Articles</string>


    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="nothing"></string>
    <string name="clock">clock</string>
    <string name="timePlaceholder">40 mins ago John Smith</string>
    <string name="title_about">About</string>
    <string name="donate_description">Help us grow and give you faster news updates. Your donation goes towards purchasing better equipment for a seamleass broadcast.</string>
    <string name="amount_label">Amount</string>
    <string name="donate_confirmation_prompt">Do you want to donate</string>
    <string name="donate_button_label">Donate</string>
    <string name="logout_button_label">Logout</string>
    <string name="enter_valid_amount">Please enter a valid amount</string>
    <string name="thankyou_for_the_donation">Thank you for your Donation!</string>
    <string name="news_category">Local</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="menu_search">Search</string>
    <string name="menu_about">About</string>
    <string name="search_box_hint">type here</string>
    <string name="search_results">Search Results</string>
    <string name="searching">Searching...</string>
    <string name="recent_results">Recent Search Results</string>
    <string name="action_share">Share</string>
    <string name="no_search_results">No results to display</string>

    <string name="choose_language">Choose Language</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="video_button">VIDEO</string>

    <string name="by">by</string>
    <string name="hours_ago">hours ago</string>
    <string name="just_now">just now</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="three_day_ago">3 days ago</string>

    <string name="language">Language</string>

    <string name="back">Back</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
